// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/ProfilePicture should match snapshot, no user specified, default props 1`] = `
<span
  className="status-wrapper"
>
  <span
    className="profile-icon "
  >
    <img
      alt=""
      className="more-modal__image"
      height="36"
      src="http://example.com/image.png"
      width="36"
    />
  </span>
  <StatusIcon
    button={false}
    className=""
    status="away"
  />
</span>
`;

exports[`components/ProfilePicture should match snapshot, no user specified, overridden props 1`] = `
<span
  className="status-wrapper"
>
  <span
    className="profile-icon "
  >
    <img
      alt=""
      className="more-modal__image"
      height="48"
      src="http://example.com/image.png"
      width="48"
    />
  </span>
  <StatusIcon
    button={false}
    className=""
    status="away"
  />
</span>
`;

exports[`components/ProfilePicture should match snapshot, profile and src, default props 1`] = `
<OverlayTrigger
  defaultOverlayShown={false}
  overlay={
    <Connect(InjectIntl(ProfilePopover))
      hasMention={false}
      hide={[Function]}
      isBusy={true}
      isRHS={false}
      src="http://example.com/image.png"
      userId="uid"
    />
  }
  placement="right"
  rootClose={true}
  trigger="click"
>
  <span
    className="status-wrapper "
  >
    <span
      className="profile-icon "
    >
      <img
        alt="user profile image"
        className="more-modal__image"
        height="36"
        src="http://example.com/emoji.png"
        width="36"
      />
    </span>
    <StatusIcon
      button={false}
      className=""
      status="away"
    />
  </span>
</OverlayTrigger>
`;

exports[`components/ProfilePicture should match snapshot, user specified 1`] = `
<span
  className="status-wrapper"
>
  <span
    className="profile-icon "
  >
    <img
      alt=""
      className="more-modal__image"
      height="36"
      src="http://example.com/image.png"
      width="36"
    />
  </span>
  <StatusIcon
    button={false}
    className=""
    status="away"
  />
</span>
`;

exports[`components/ProfilePicture should match snapshot, user specified, overridden props 1`] = `
<span
  className="status-wrapper"
>
  <span
    className="profile-icon "
  >
    <img
      alt=""
      className="more-modal__image"
      height="48"
      src="http://example.com/image.png"
      width="48"
    />
  </span>
  <StatusIcon
    button={false}
    className=""
    status="away"
  />
</span>
`;
